crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@4.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb '{\"a\": 12}' @? '$.b';"
---
SelectStmt@0..34
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..33
    Ident@7..12 "jsonb"
    Whitespace@12..13 " "
    AExpr@13..33
      TypeCast@13..24
        AConst@13..24
          Sconst@13..24 "'{\"a\": 12}'"
      Whitespace@24..25 " "
      Op@25..27 "@?"
      Whitespace@27..28 " "
      AConst@28..33
        Sconst@28..33 "'$.b'"
  Ascii59@33..34 ";"

