crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@40.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb '[{\"a\": 1}, {\"a\": 2}]' @? '$[0 to 1] ? (@.a > 1)';"
---
SelectStmt@0..63
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..62
    Ident@7..12 "jsonb"
    Whitespace@12..13 " "
    AExpr@13..62
      TypeCast@13..35
        AConst@13..35
          Sconst@13..35 "'[{\"a\": 1}, {\"a\": 2}]'"
      Whitespace@35..36 " "
      Op@36..38 "@?"
      Whitespace@38..39 " "
      AConst@39..62
        Sconst@39..62 "'$[0 to 1] ? (@.a > 1)'"
  Ascii59@62..63 ";"

