crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@404.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT jsonb_path_query_first('[{\"a\": 1}, {\"a\": 2}]', '$[*].a ? (@ > 10)');"
---
SelectStmt@0..75
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..73
    FuncCall@7..73
      Ident@7..29 "jsonb_path_query_first"
      Ascii40@29..30 "("
      AConst@30..52
        Sconst@30..52 "'[{\"a\": 1}, {\"a\": 2}]'"
      Ascii44@52..53 ","
      Whitespace@53..54 " "
      AConst@54..73
        Sconst@54..73 "'$[*].a ? (@ > 10)'"
  Ascii41@73..74 ")"
  Ascii59@74..75 ";"

