crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@406.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT jsonb_path_query_first('[{\"a\": 1}, {\"a\": 2}, {\"a\": 3}, {\"a\": 5}]', '$[*].a ? (@ > $min && @ < $max)', vars => '{\"min\": 3, \"max\": 4}');"
---
SelectStmt@0..141
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..139
    FuncCall@7..139
      Ident@7..29 "jsonb_path_query_first"
      Ascii40@29..30 "("
      AConst@30..72
        Sconst@30..72 "'[{\"a\": 1}, {\"a\": 2}, ..."
      Ascii44@72..73 ","
      Whitespace@73..74 " "
      AConst@74..107
        Sconst@74..107 "'$[*].a ? (@ > $min & ..."
      Ascii44@107..108 ","
      Whitespace@108..109 " "
      NamedArgExpr@109..139
        Ident@109..113 "vars"
        Whitespace@113..114 " "
        EqualsGreater@114..116 "=>"
        Whitespace@116..117 " "
        AConst@117..139
          Sconst@117..139 "'{\"min\": 3, \"max\": 4}'"
  Ascii41@139..140 ")"
  Ascii59@140..141 ";"

