crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@409.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT jsonb_path_exists('[{\"a\": 1}, {\"a\": 2}]', '$[*].a ? (@ > 1)');"
---
SelectStmt@0..69
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..67
    FuncCall@7..67
      Ident@7..24 "jsonb_path_exists"
      Ascii40@24..25 "("
      AConst@25..47
        Sconst@25..47 "'[{\"a\": 1}, {\"a\": 2}]'"
      Ascii44@47..48 ","
      Whitespace@48..49 " "
      AConst@49..67
        Sconst@49..67 "'$[*].a ? (@ > 1)'"
  Ascii41@67..68 ")"
  Ascii59@68..69 ";"

